styling issue fix overflow of Cards

--- a/src/components/card-list/CardList.css
+++ b/src/components/card-list/CardList.css
@@ -2,6 +2,7 @@
     width: 85vw;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
     grid-gap: 20px;
+
 }
